--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     ]
   },
   "dependencies": {
+    "@google-cloud/storage": "^5.16.1",
     "body-parser": "^1.19.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
